--- a/Module 12/book-examples/text style.css
+++ b/Module 12/book-examples/text style.css
@@ -4,5 +4,14 @@
     word-spacing:15px;
     text-decoration:underline;
     text-align:center;
-    font-family: "arial",serif;
+    font-family: "body-text";
+}
+@font-face{
+    font-family: "body-text";
+    src:url(./fonts/Bokor-Regular.ttf);
+}
+.font-class{
+    font-family: "body-text";
+    font-size:16px;
+    font-weight:400;
 }
