--- a/module 20/book-examples/psd.css
+++ b/module 20/book-examples/psd.css
@@ -32,3 +32,65 @@ nav ul li a{
     color: white;
     text-decoration: none;
 }
+.services{
+background-color: aquamarine;
+color: white;
+padding: 50px 0;
+}
+.service-list{
+display: flex;
+justify-content: center;
+gap: 30px;
+margin-top: 30px;
+}
+.service{
+    text-align: center;
+    font-size: 20px;
+}
+.service i{
+    font-size: 30px;
+}
+.team{
+    background: #ecf0f1;
+    padding: 50px 0;
+}
+.team-members{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 30px;
+}
+.member img{
+    width: 100px;
+    border-radius: 50%;
+}
+.contact{
+    background: #34495e;
+    color: white;
+    padding: 50px 0;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 300px;
+    margin: auto;
+}
+input, textarea {
+padding: 10px;
+border: none;
+border-radius: 5px;
+}
+button{
+    background: #2980b9;
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+}
+footer{
+    background: #2c3e50;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+}
