--- a/scrum/home.css
+++ b/scrum/home.css
@@ -5,7 +5,7 @@ body {
     background-color:  #3498db;
 }
 
-header {
+nav{
     background-color:  #333;
     color: red;
     padding: 10px 0;
@@ -37,5 +37,5 @@ footer {
     text-align: center;
     background-color:  #333;
     color: red;
-    padding: 10px;
+    padding: 10px; 
 }
