--- a/scrum/contact.css
+++ b/scrum/contact.css
@@ -2,7 +2,8 @@ body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     margin: 5px;
     padding: 5px;
-    background-color:  #3498db;
+    background-image: url(circle-scatter-haikei.svg);
+    background-size: cover;
 }
 img{
     margin: 30px;
@@ -29,6 +30,7 @@ label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
+    color: red;
 }
 
 input, textarea {
@@ -37,6 +39,7 @@ input, textarea {
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    color: red;
 }
 
 button {
@@ -54,4 +57,48 @@ button {
 button:hover {
     transform: scale(1.04);
     transition: all 0.4s ease-in-out;
+}
+nav{
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 65px;
+    background-color:#333 ;
+    padding: 0;
+    text-decoration: none;
+    gap: 20px;
+    color: red;
+}
+li{
+    list-style: none;
+    display: inline-block;
+}
+a{
+    position: relative;
+    cursor: pointer;
+    color: rgb(250, 2, 2);
+    font-size: 28px;
+    padding: 0.5em 1em;
+    transition: color 0.25s;
+    text-decoration: none;
+    transition: all 0.4s ease-in-out;
+    border-radius: 10px;
+    font-family: Rubik, sans-serif;
+}
+a:hover{
+    background-color: rgb(255, 51, 51);
+    height: 60px;
+    width: 100%;
+    border-radius: 10px;
+}
+footer{
+    padding: 30px;
+    font-size:40px ;
+    text-size-adjust: 70px;
+    text-align: center;
+    background-color: #333;
+    color: red;
+    margin: 50px;
+    padding: 30px;
 }
