--- a/scrum/home.css
+++ b/scrum/home.css
@@ -2,7 +2,13 @@ body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     margin: 5px;
     padding: 5px;
-    background-color:  #3498db;
+ background-image: url(circle-scatter-haikei.svg);
+ background-size: cover;
+}
+header{
+    text-align: center;
+    background-color: #333;
+    color: red;
 }
 
 nav{
@@ -38,4 +44,34 @@ footer {
     background-color:  #333;
     color: red;
     padding: 10px; 
+}
+a{
+    position: relative;
+    cursor: pointer;
+    color: rgb(250, 2, 2);
+    font-size: 28px;
+    padding: 0.5em 1em;
+    transition: color 0.25s;
+    text-decoration: none;
+    transition: all 0.4s ease-in-out;
+    border-radius: 10px;
+    font-family: Rubik, sans-serif;
+}
+a:hover{
+    background-color: rgb(255, 51, 51);
+    height: 60px;
+    width: 100%;
+    border-radius: 10px;
+}
+img{
+    width: 40%;
+    height: 30%;
+    justify-content: center;
+    
+  margin-left: 80px;
+  margin-right: 70px;
+}
+footer{
+    padding: 30px;
+    font-size: 40px;
 }
